--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -30,7 +30,7 @@
   font-size: 2.5em;
   margin-bottom: 30px;
   text-align: center;
-  color: #0f0f0f;
+  color:#1c4964;
 }
 
 .right-side span {
@@ -55,15 +55,17 @@
 .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #0f0f0f;
+  color: #fff;
 }
 
 .form-group .form-control {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #1c4964;
   border-radius: 4px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  background-color: transparent;
+  
 }
 
 .form-group .form-control:focus {
