--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email" formControlName="user_email" placeholder="Enter your email" required class="form-control" />
+            <input type="email" id="email" formControlName="user_email" placeholder="Enter your email" required class="form-control" autocomplete="off"/>
             <div *ngIf="resetPasswordForm.get('user_email')?.invalid && resetPasswordForm.get('user_email')?.touched" class="invalid-feedback">
               <small *ngIf="resetPasswordForm.get('user_email')?.errors?.['required']">Email is required</small>
               <small *ngIf="resetPasswordForm.get('user_email')?.errors?.['email']">Invalid email</small>
