--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -7,7 +7,7 @@
             <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <label for="user_firstname">First Name</label>
-                <input id="user_firstname" formControlName="user_firstname" type="text" class="form-control">
+                <input id="user_firstname" placeholder="Enter your name" formControlName="user_firstname" type="text" class="form-control" autocomplete="off">
                 <div *ngIf="signupForm.get('user_firstname')?.invalid && signupForm.get('user_firstname')?.touched" class="invalid-feedback">
                   <small>First name is required</small>
                 </div>
@@ -15,7 +15,7 @@
              
               <div class="form-group">
                 <label for="user_email">Email</label>
-                <input id="user_email" formControlName="user_email" type="email" class="form-control">
+                <input id="user_email" placeholder="Enter your email" formControlName="user_email" type="email" class="form-control" autocomplete="off">
                 <div *ngIf="signupForm.get('user_email')?.invalid && signupForm.get('user_email')?.touched" class="invalid-feedback">
                   <small *ngIf="signupForm.get('user_email')?.errors?.['required']">Email is required</small>
                   <small *ngIf="signupForm.get('user_email')?.errors?.['email']">Invalid email</small>
@@ -23,7 +23,7 @@
               </div>
               <div class="form-group"> 
                 <label for="user_phone">Phone</label>
-                <input id="user_phone" formControlName="user_phone" type="text" class="form-control">
+                <input id="user_phone" placeholder="Enter your phone number" formControlName="user_phone" type="text" class="form-control" autocomplete="off">
                 <div *ngIf="signupForm.get('user_phone')?.invalid && signupForm.get('user_phone')?.touched" class="invalid-feedback">
                   <small *ngIf="signupForm.get('user_phone')?.errors?.['required']">Phone is required</small>
                   <small *ngIf="signupForm.get('user_phone')?.errors?.['pattern']">Invalid phone number</small>
@@ -32,7 +32,7 @@
               <div class="form-group">
                 <label for="user_password">Password</label>
                 <div class="password-input-container">
-                    <input id="user_password" formControlName="user_password" [type]="hidePassword ? 'password' : 'text'" required class="form-control">
+                    <input id="user_password" placeholder="Enter your password" formControlName="user_password" [type]="hidePassword ? 'password' : 'text'" required class="form-control">
                     <span class="toggle-password" (click)="togglePasswordVisibility()">{{ hidePassword ? '👁' : '🙈' }}</span>
                 </div>
 
